--- a/package.json
+++ b/package.json
@@ -12,13 +12,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.5",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.5",
+    "@angular/localize": "^10.0.14",
+    "@angular/material": "^10.2.4",
+    "@angular/material-moment-adapter": "^10.2.5",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@popperjs/core": "^2.5.3",
+    "angularx-qrcode": "^10.0.10",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "ngrx-store-logger": "^0.2.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
