--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ks89/angular-modal-gallery": "^7.2.6",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^10.0.1",
@@ -32,9 +33,13 @@
     "angularx-qrcode": "^10.0.10",
     "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "mousetrap": "^1.6.5",
+    "ng2-material-dropdown": "^0.11.0",
     "ngrx-store-logger": "^0.2.4",
+    "ngx-dropzone": "^2.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -43,9 +48,11 @@
     "@angular-devkit/build-angular": "~0.1000.4",
     "@angular/cli": "~10.0.4",
     "@angular/compiler-cli": "~10.0.5",
-    "@types/node": "^12.11.1",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mousetrap": "^1.6.4",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
